force-app/main/default/objects/Leave_Type__c/fields/Available_During_Probation__c.field-meta.xml
<CustomField>
    <fullName>Available_During_Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available During Probation</label>
    <type>Checkbox</type>
</CustomField>