force-app/main/default/objects/Leave_Type__c/fields/Carry_Forward_Expires_Days__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Expires_Days__c</fullName>
    <label>Carry Forward Expires Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>