force-app/main/default/objects/Leave_Type__c/fields/Gender_Required__c.field-meta.xml
<CustomField>
    <fullName>Gender_Required__c</fullName>
    <label>Gender Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male,</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>