force-app/main/default/objects/Leave_Type__c/fields/Is_Mandatory_Leave__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mandatory Leave</label>
    <type>Checkbox</type>
</CustomField>