force-app/main/default/objects/Leave_Type__c/fields/Last_Modified_By_HR__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HR person who last edited the policy; helps auditing.</description>
    <label>Last Modified By HR</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leave Type</relationshipLabel>
    <relationshipName>Leave_Type</relationshipName>
    <type>Lookup</type>
</CustomField>