force-app/main/default/objects/Leave_Type__c/fields/Leave_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Code__c</fullName>
    <description>(CASUAL, SICK, MATERNITY, MARRIAGE, BEREAVEMENT)</description>
    <label>Leave Type Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>