force-app/main/default/objects/Leave_Type__c/fields/Max_Carry_Forward_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Carry_Forward_Days__c</fullName>
    <label>Max Carry Forward Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>