force-app/main/default/objects/Leave_Type__c/fields/Maximum_Consecutive_Days__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Consecutive_Days__c</fullName>
    <label>Maximum Consecutive Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>