force-app/main/default/objects/Leave_Type__c/fields/Min_Days_Since_Joining__c.field-meta.xml
<CustomField>
    <fullName>Min_Days_Since_Joining__c</fullName>
    <label>Min Days Since Joining</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>