force-app/main/default/objects/Leave_Type__c/fields/Part_of_Six_Month_Cap__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Six_Month_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of Six-Month Cap</label>
    <type>Checkbox</type>
</CustomField>