force-app/main/default/objects/Leave_Type__c/fields/Probation_Quota__c.field-meta.xml
<CustomField>
    <fullName>Probation_Quota__c</fullName>
    <label>Probation Quota</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>