force-app/main/default/objects/Leave_Type__c/fields/Requires_Document__c.field-meta.xml
<CustomField>
    <fullName>Requires_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Document</label>
    <type>Checkbox</type>
</CustomField>