force-app/main/default/objects/Leave_Type__c/fields/Requires_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Manager Approval</label>
    <type>Checkbox</type>
</CustomField>