force-app/main/default/objects/Leave_Type__c/fields/Six_Month_Cap_Days__c.field-meta.xml
<CustomField>
    <fullName>Six_Month_Cap_Days__c</fullName>
    <label>Six-Month Cap Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>